--- a/mcop/app/src/main/res/layout/activity_applist.xml
+++ b/mcop/app/src/main/res/layout/activity_applist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -19,5 +20,23 @@
             android:textStyle="bold"
             />
     </RelativeLayout>
+
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tabs"
+        app:pstsShouldExpand="true"
+        app:pstsTextAllCaps="true"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@+id/navbar"
+        />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/app_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tabs"
+        >
+
+    </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
