--- a/mcop/app/src/main/res/values/dimens.xml
+++ b/mcop/app/src/main/res/values/dimens.xml
@@ -2,8 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="initialization_margig">40dp</dimen>
+    <dimen name="initialization_margin">40dp</dimen>
 
     <dimen name="title_text_size">24dp</dimen>
     <dimen name="subtitle_text_size">20dp</dimen>
+    <dimen name="row_title_text_size">16dp</dimen>
+    <dimen name="row_desc_text_size">14dp</dimen>
 </resources>
