--- a/mcop/app/src/main/res/values/dimens.xml
+++ b/mcop/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="subtitle_text_size">20dp</dimen>
     <dimen name="row_title_text_size">16dp</dimen>
     <dimen name="row_desc_text_size">14dp</dimen>
+
+    <dimen name="button_width">150dp</dimen>
+
 </resources>
