--- a/mcop/app/src/main/res/layout/activity_app_info.xml
+++ b/mcop/app/src/main/res/layout/activity_app_info.xml
@@ -15,7 +15,6 @@
             android:text="@string/label_apps_info"
             android:layout_centerInParent="true"
             android:textSize="@dimen/title_text_size"
-            android:textStyle="bold"
             />
     </RelativeLayout>
 
@@ -69,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/container_title_relative"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="Version 1.0.0"
+        android:text="@string/label_version"
         android:textStyle="bold"
         />
     <TextView
