--- a/mcop/app/src/main/res/values/dimens.xml
+++ b/mcop/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="initialization_margin">40dp</dimen>
+    <dimen name="line_margin">8dp</dimen>
 
     <dimen name="title_text_size">24dp</dimen>
     <dimen name="subtitle_text_size">20dp</dimen>
