--- a/mcop/app/src/main/res/layout/activity_home.xml
+++ b/mcop/app/src/main/res/layout/activity_home.xml
@@ -77,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin"
-                android:text="user install"
+                android:text="Total installed app"
                 />
             <TextView
                 android:id="@+id/number_total_install_textview"
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin"
                 android:layout_below="@+id/title_total_install_textview"
-                android:text="user install and using internet"
+                android:text="App using internet"
                 />
             <TextView
                 android:id="@+id/number_app_using_internet_textview"
@@ -106,11 +106,14 @@
 
             <Button
                 android:id="@+id/manage_app_button"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/button_width"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                 android:text="@string/label_manageapp"
+                android:textAllCaps="false"
+                android:background="@drawable/btn_button"
                 />
 
         </RelativeLayout>
