--- a/mcop/app/src/main/res/values/colors.xml
+++ b/mcop/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBgGray">#fff3f3f3</color>
+    <color name="colorGreenSafe">#239B56</color>
 </resources>
