--- a/mcop/app/src/main/res/values/styles.xml
+++ b/mcop/app/src/main/res/values/styles.xml
@@ -1,11 +1,17 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#d6000f</item>
+        <item name="colorPrimaryDark">#bc0010</item>
+    </style>
+
+    <style name="AppTheme.WithoutActionBar" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.WithoutActionBarAndTranslucentStatusBar" parent="AppTheme.WithoutActionBar">
     </style>
 
 </resources>
