--- a/mcop/app/src/main/res/layout/activity_applist.xml
+++ b/mcop/app/src/main/res/layout/activity_applist.xml
@@ -15,18 +15,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_apps"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/title_text_size"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             />
     </RelativeLayout>
 
     <com.astuetz.PagerSlidingTabStrip
         android:id="@+id/tabs"
-        app:pstsShouldExpand="true"
-        app:pstsTextAllCaps="true"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_below="@+id/navbar"
+        app:pstsShouldExpand="true"
+        app:pstsTextAllCaps="true"
+        android:background="?attr/colorPrimary"
+        app:pstsIndicatorHeight="5dp"
         />
 
     <android.support.v4.view.ViewPager
