--- a/mcop/app/src/main/res/values/dimens.xml
+++ b/mcop/app/src/main/res/values/dimens.xml
@@ -6,12 +6,14 @@
     <dimen name="line_margin">8dp</dimen>
     <dimen name="activity_horizontal_margin_bulet">24dp</dimen>
     <dimen name="scroll_margin">32dp</dimen>
-
+    <dimen name="inner_cycle">72dp</dimen>
     <dimen name="title_text_size">20dp</dimen>
     <dimen name="subtitle_text_size">20dp</dimen>
     <dimen name="row_title_text_size">16dp</dimen>
     <dimen name="row_desc_text_size">14dp</dimen>
-
+    <dimen name="device_have_text_size">12dp</dimen>
+    <dimen name="warning_text_size">20dp</dimen>
+    <dimen name="amount_text_size">48dp</dimen>
     <dimen name="button_width">150dp</dimen>
 
 </resources>
