--- a/mcop/app/src/main/res/animator/scal1.xml
+++ b/mcop/app/src/main/res/animator/scal1.xml
@@ -4,12 +4,16 @@
         android:valueFrom="0"
         android:valueTo="1"
         android:propertyName="scaleX"
-        android:duration="1000"
+        android:duration="1500"
+        android:repeatMode="restart"
+        android:repeatCount="infinite"
         />
     <objectAnimator
         android:valueFrom="0"
         android:valueTo="1"
         android:propertyName="scaleY"
-        android:duration="1000"
+        android:duration="1500"
+        android:repeatMode="restart"
+        android:repeatCount="infinite"
         />
 </set>
