--- a/mcop/app/src/main/res/layout/activity_app_info.xml
+++ b/mcop/app/src/main/res/layout/activity_app_info.xml
@@ -13,8 +13,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_apps_info"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:textSize="@dimen/title_text_size"
+            android:textColor="@android:color/white"
             />
     </RelativeLayout>
 
@@ -71,55 +73,120 @@
         android:text="@string/label_version"
         android:textStyle="bold"
         />
+
     <TextView
-        android:id="@+id/status_textview"
+        android:id="@+id/version_value_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/container_title_relative"
+        android:text="1.0.0"
+        android:layout_toRightOf="@+id/version_textview"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        />
+
+    <TextView
+        android:id="@+id/update_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/version_textview"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:text="Status Safe"
+        android:text="@string/label_updateed"
         android:textStyle="bold"
         />
 
     <TextView
-        android:id="@+id/storage_textview"
+        android:id="@+id/update_value_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:text="@string/label_storage"
-        android:textStyle="bold"
-        android:layout_below="@+id/status_textview"
-        android:layout_alignLeft="@+id/status_textview"
-        android:layout_alignStart="@+id/status_textview" />
+        android:layout_below="@+id/version_textview"
+        android:text="Marh 27, 2017"
+        android:layout_toRightOf="@+id/update_textview"
+        />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/storage_textview"
-        android:layout_above="@+id/container_button"
-        android:layout_alignLeft="@+id/status_textview"
-        android:layout_alignStart="@+id/status_textview"
+    <TextView
+        android:id="@+id/risk_level_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/update_textview"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:text="@string/label_risk_level"
+        android:textStyle="bold"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/risk_level_textview"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         >
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/risk_base_grey"
+            android:layout_centerVertical="true"
+            />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
-            <TextView
-                android:id="@+id/permission_textview"
+            <Button
+                android:id="@+id/safe_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/label_permission"
-                android:layout_marginTop="14dp"
-                android:textStyle="bold"
+                android:layout_weight="1"
+                android:text="Safe"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:background="@drawable/risk_safe"
+                android:layout_marginLeft="@dimen/button_status_margin"
+                android:layout_marginRight="@dimen/button_status_margin"
+                />
+            <Button
+                android:id="@+id/low_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/risk_low"
+                android:text="Low"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="@dimen/button_status_margin"
+                android:layout_marginRight="@dimen/button_status_margin"
+                />
+            <Button
+                android:id="@+id/medium_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/risk_medium"
+                android:text="Medium"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="@dimen/button_status_margin"
+                android:layout_marginRight="@dimen/button_status_margin"
+                />
+            <Button
+                android:id="@+id/high_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/risk_high"
+                android:text="High"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="@dimen/button_status_margin"
+                android:layout_marginRight="@dimen/button_status_margin"
                 />
 
         </LinearLayout>
 
-    </ScrollView>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/container_button"
@@ -135,6 +202,9 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="@string/label_ignore"
+            android:background="@drawable/btn_selector"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
             />
 
         <Button
@@ -145,6 +215,9 @@
             android:text="@string/label_uninstall"
             android:layout_toRightOf="@+id/ignore_button"
             android:layout_margin="@dimen/activity_horizontal_margin"
+            android:background="@drawable/btn_selector"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
             />
 
     </RelativeLayout>
