--- a/mcop/app/src/main/res/values/dimens.xml
+++ b/mcop/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="line_margin">8dp</dimen>
     <dimen name="activity_horizontal_margin_bulet">24dp</dimen>
     <dimen name="scroll_margin">32dp</dimen>
+    <dimen name="button_status_margin">-10dp</dimen>
     <dimen name="inner_cycle">72dp</dimen>
     <dimen name="title_text_size">20dp</dimen>
     <dimen name="subtitle_text_size">20dp</dimen>
