add back button

--- a/mcop/app/src/main/res/values/dimens.xml
+++ b/mcop/app/src/main/res/values/dimens.xml
@@ -16,5 +16,5 @@
     <dimen name="warning_text_size">20dp</dimen>
     <dimen name="amount_text_size">32dp</dimen>
     <dimen name="button_width">150dp</dimen>
-
+    <dimen name="button_height">40dp</dimen>
 </resources>
