--- a/mcop/app/src/main/res/layout/activity_app_info.xml
+++ b/mcop/app/src/main/res/layout/activity_app_info.xml
@@ -9,14 +9,21 @@
         android:layout_height="44dp"
         android:background="@color/colorPrimary"
         >
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="@dimen/button_height"
+            android:layout_height="@dimen/button_width"
+            android:layout_centerVertical="true"
+            android:background="@drawable/btn_back"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_apps_info"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:textSize="@dimen/title_text_size"
             android:textColor="@android:color/white"
+            android:layout_toRightOf="@+id/back_button"
             />
     </RelativeLayout>
 
