--- a/mcop/app/src/main/res/layout/activity_applist.xml
+++ b/mcop/app/src/main/res/layout/activity_applist.xml
@@ -11,6 +11,13 @@
         android:layout_height="44dp"
         android:background="@color/colorPrimary"
         >
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="@dimen/button_height"
+            android:layout_height="@dimen/button_width"
+            android:layout_centerVertical="true"
+            android:background="@drawable/btn_back"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,7 +25,7 @@
             android:layout_centerVertical="true"
             android:textColor="@android:color/white"
             android:textSize="@dimen/title_text_size"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_toRightOf="@+id/back_button"
             />
     </RelativeLayout>
 
