--- a/mcop/app/src/main/res/layout/activity_app_info.xml
+++ b/mcop/app/src/main/res/layout/activity_app_info.xml
@@ -123,11 +123,26 @@
         android:textStyle="bold"
         />
 
+    <Button
+        android:id="@+id/level_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Safe"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:background="@drawable/risk_safe"
+        android:layout_marginLeft="@dimen/button_status_margin"
+        android:layout_marginRight="@dimen/button_status_margin"
+        android:layout_toRightOf="@+id/risk_level_textview"
+        android:layout_below="@+id/update_value_textview"
+        />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/risk_level_textview"
         android:layout_margin="@dimen/activity_horizontal_margin"
+        android:visibility="gone"
         >
 
         <ImageView
